kubernetes/traefik/del-deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          args:
            - --api.insecure
            - --accesslog
            - --accesslog.filepath=/data/access.log
            - --accesslog.bufferingsize=100
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.wireguard.address=:51280/udp
            - --entrypoints.wireguard.udp.timeout=10s
            - --providers.kubernetescrd
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=omdv.public@gmail.com
            - --certificatesresolvers.default.acme.storage=/data/acme.json
          image: traefik:v2.5
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
            # - name: wireguard
            #   containerPort: 51820
            #   protocol: UDP
          volumeMounts:
            - mountPath: /data
              name: storage-volume
      restartPolicy: Always
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: pvc-traefik
