kubernetes/traefik/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          args:
            - --api.insecure
            - --accesslog
            - --accesslog.filepath=/data/access.log
            - --accesslog.bufferingsize=100
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --providers.kubernetescrd
            # - --providers.docker
            # - --providers.docker.endpoint=/var/run/docker.sock
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=omdv.public@gmail.com
            - --certificatesresolvers.default.acme.storage=/data/acme.json
            # - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          image: traefik:v2.1.9
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: storage-volume
            # - name: dockersock
            #   mountPath: "/var/run/docker.sock"
            #   readOnly: true
      restartPolicy: Always
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: pvc-traefik
        # - name: dockersock
        #   hostPath:
        #     path: /var/run/docker.sock
