kubernetes/traefik/03-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  labels:
    app: traefik

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${HOMELAB_DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
